sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:5: error: not found: value estSelectionne
while(estSelectionne()==false){
      ^BasicPancake:17: error: not found: value rang
	retourne(rang) 
                 ^